<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightWhite"
    tools:context=".SearchActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/search_card_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50"
        android:layout_margin="@dimen/size_15"
        android:elevation="@dimen/size_5"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/size_25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/size_50"
                android:layout_height="match_parent"
                android:padding="@dimen/size_10"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/search_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/size_60"
                android:layout_marginEnd="@dimen/size_60"
                android:background="@android:color/transparent"
                android:hint="@string/searchText"
                android:inputType="number"
                android:maxLength="10"
                android:singleLine="true"
                android:textColor="@color/darkGrey"
                android:textColorHint="@color/hint"
                android:textSize="@dimen/textsize_medium"
                app:layout_constraintEnd_toStartOf="@id/search"
                app:layout_constraintStart_toEndOf="@id/back" />

            <ImageView
                android:id="@+id/search"
                android:layout_width="@dimen/size_60"
                android:layout_height="match_parent"
                android:padding="@dimen/size_10"
                android:src="@drawable/ic_search"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/result_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/search_card_view">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mobilenumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50"
            android:layout_marginStart="@dimen/size_15"
            android:layout_marginTop="@dimen/size_30"
            android:layout_marginEnd="@dimen/size_15"
            android:background="@drawable/edit_bg"
            android:gravity="center_vertical"
            android:hint="@string/mobileNumberLabel"
            android:paddingStart="@dimen/size_15"
            android:paddingEnd="@dimen/size_15"
            android:singleLine="true"
            android:textColor="@color/darkGrey"
            android:textColorHint="@color/hint"
            android:textSize="@dimen/textsize_medium"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50"
            android:layout_marginStart="@dimen/size_15"
            android:layout_marginTop="@dimen/size_15"
            android:layout_marginEnd="@dimen/size_15"
            android:background="@drawable/edit_bg"
            android:gravity="center_vertical"
            android:hint="@string/timeLabel"
            android:paddingStart="@dimen/size_15"
            android:paddingEnd="@dimen/size_15"
            android:singleLine="true"
            android:textColor="@color/darkGrey"
            android:textColorHint="@color/hint"
            android:textSize="@dimen/textsize_medium"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mobilenumber" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/upload"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50"
            android:layout_marginStart="@dimen/size_15"
            android:layout_marginTop="@dimen/size_15"
            android:layout_marginEnd="@dimen/size_15"
            android:background="@drawable/edit_bg"
            android:gravity="center_vertical"
            android:hint="@string/upload"
            android:paddingStart="@dimen/size_15"
            android:paddingEnd="@dimen/size_15"
            android:singleLine="true"
            android:textColor="@color/darkGrey"
            android:textColorHint="@color/hint"
            android:textSize="@dimen/textsize_medium"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/time" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/download"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50"
            android:layout_marginStart="@dimen/size_15"
            android:layout_marginTop="@dimen/size_15"
            android:layout_marginEnd="@dimen/size_15"
            android:background="@drawable/edit_bg"
            android:gravity="center_vertical"
            android:hint="@string/download"
            android:paddingStart="@dimen/size_15"
            android:paddingEnd="@dimen/size_15"
            android:singleLine="true"
            android:textColor="@color/darkGrey"
            android:textColorHint="@color/hint"
            android:textSize="@dimen/textsize_medium"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upload" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>