<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="@dimen/size_50"
        android:layout_height="@dimen/size_50"
        android:layout_margin="@dimen/size_15"
        android:background="@drawable/round_bg"
        android:padding="@dimen/size_10"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/search"
        android:layout_width="@dimen/size_50"
        android:layout_height="@dimen/size_50"
        android:layout_marginTop="@dimen/size_15"
        android:layout_marginBottom="@dimen/size_15"
        android:padding="@dimen/size_10"
        android:src="@drawable/ic_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/size_120"
        android:layout_height="@dimen/size_50"
        android:layout_marginTop="@dimen/size_15"
        android:src="@mipmap/dvara_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1"
        android:layout_marginTop="@dimen/size_15"
        android:background="@color/lightGrey"
        app:layout_constraintTop_toBottomOf="@id/logo" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_15"
        app:layout_constraintTop_toBottomOf="@id/view">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/internet_availability_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textsize_small"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_5"
            android:layout_marginTop="@dimen/size_15"
            android:gravity="center"
            android:text=""
            android:textColor="@color/darkGrey"
            android:textSize="@dimen/textsize_xlarge"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/internet_availability_label" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/internet_speed_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_15"
            android:gravity="center"
            android:text="@string/networkSpeed"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_large"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/time_value" />

        <androidx.cardview.widget.CardView
            android:id="@+id/upload_cardVw"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_100"
            android:layout_marginStart="@dimen/size_2"
            android:layout_marginTop="@dimen/size_10"
            android:layout_marginEnd="@dimen/size_10"
            android:layout_marginBottom="@dimen/size_5"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/size_20"
            app:cardElevation="@dimen/size_4"
            app:layout_constraintEnd_toStartOf="@id/download_cardVw"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/internet_speed_label">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/size_10">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/upload_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/textsize"
                    android:drawableStart="@drawable/ic_up_arrow"
                    android:textStyle="bold"
                    android:drawablePadding="@dimen/size_5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/upload_label">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/upload_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="0"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/textsize_45"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/upload_unit"
                    app:layout_constraintTop_toTopOf="parent"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/upload_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/size_5"
                    android:text="@string/networkSpeedUnit"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/textsize_medium"
                    android:textStyle="bold"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/upload_speed" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/download_cardVw"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_100"
            android:layout_marginStart="@dimen/size_10"
            android:layout_marginTop="@dimen/size_10"
            android:layout_marginEnd="@dimen/size_2"
            android:layout_marginBottom="@dimen/size_5"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/size_20"
            app:cardElevation="@dimen/size_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/upload_cardVw"
            app:layout_constraintTop_toBottomOf="@id/internet_speed_label" >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/size_10">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/download_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/download"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/textsize"
                    android:drawableStart="@drawable/ic_download"
                    android:textStyle="bold"
                    android:drawablePadding="@dimen/size_5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/download_label">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/download_speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="0"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/textsize_45"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/download_unit"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/download_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginStart="@dimen/size_5"
                        android:text="@string/networkSpeedUnit"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/textsize_medium"
                        android:textStyle="bold"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/download_speed" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/mobilenumber"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_50"
            android:layout_marginTop="@dimen/size_30"
            android:layout_marginEnd="@dimen/size_15"
            android:background="@drawable/edit_bg"
            android:hint="@string/enterMobileNumber"
            android:textColorHint="@color/hint"
            android:inputType="number"
            android:maxLength="10"
            android:singleLine="true"
            android:paddingStart="@dimen/size_15"
            android:paddingEnd="@dimen/size_15"
            android:textColor="@color/darkGrey"
            android:textSize="@dimen/textsize_medium"
            app:layout_constraintEnd_toStartOf="@id/submit"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/download_cardVw" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_50"
            android:layout_marginTop="@dimen/size_30"
            android:background="@drawable/button_bg"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/mobilenumber"
            app:layout_constraintTop_toBottomOf="@id/download_cardVw" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>